# filemanager

./: .gitignore  LICENSE  README.md  TODO  compose.yaml
.github/workflows/: server-tests.yml
client/: .gitignore  package-lock.json  package.json  sb-vite.config.ts
client/.storybook/: main.ts  preview.ts
client/app/: actions.tsx  app.css  cookies.server.ts  root.tsx  routes.ts
client/app/api/: files.ts  info.ts  preferences.ts  upload.ts  users.ts
client/app/components/: app-sidebar.tsx  directory-grid.tsx  file-grid.tsx  file-icon.test.ts  file-icon.tsx  inspector-sidebar.tsx  nav-main.tsx  preferences-field.tsx  preferences-section.tsx  team-switcher.tsx  theme-provider.tsx  toolbar.tsx  workspace-switcher.tsx
client/app/components/pages/: login.stories.tsx  login.tsx
client/app/components/ui/: alert-dialog.tsx  button.stories.tsx  button.tsx  context-menu.tsx  dropdown-menu.tsx  sidebar.tsx
client/app/hooks/: use-file-upload.ts  use-inspector.ts
client/app/layouts/: shell.tsx
client/app/pages/: api-documentation.tsx  file-browser.tsx  files.tsx  login.tsx  preferences.tsx  user-management.tsx
client/app/welcome/: welcome.tsx
client/models/: openapi.ts
server/: .gitignore  example.config.toml  pyproject.toml
server/src/: configuration.py  main.py
server/src/clients/: minio.py
server/src/models/: file.py  user.py
server/src/repositories/: logger.py
server/src/repositories/files/: base.py  fastapi.py  minio.py
server/src/repositories/users/: base.py  fastapi.py  ldap.py
server/src/routes/: auth.py  file.py  info.py  user.py
server/tests/: conftest.py  test_main.py
server/tests/repositories/files/: test_minio.py
