[project]
name = "filemanager-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Luke Harris",email = "6074660+luk707@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "minio (>=7.2.15,<8.0.0)",
    "rich (>=13.9.4,<14.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
