[project]
name = "filemanager-server"
version = "0.1.0"
description = ""
authors = [
    { name = "Luke Harris", email = "6074660+luk707@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "minio (>=7.2.15,<8.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "humanize (>=4.12.1,<5.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "toml (>=0.10.2,<0.11.0)",
    "ldap3 (>=2.9.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
